fix:rewards title alignment fix

--- a/src/scss/pages/vault.scss
+++ b/src/scss/pages/vault.scss
@@ -188,8 +188,10 @@
     .RewardWrapper {
       gap: 16px;
       align-items: center;
+
       @include media($xs) {
         flex-direction: column;
+        align-items: flex-start;
       }
 
       .rewardText {
